Fixed responsive-design, added Soeren and Marcel

--- a/css/style.css
+++ b/css/style.css
@@ -814,11 +814,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .pic {
   margin-bottom: 15px;
   overflow: hidden;
-  height: 260px;
+  /*height: 260px;*/
 }
 
 #team .member .pic img {
-  max-width: 100%;
+  /*max-width: 100%;*/
+  max-width: 260px;
 }
 
 #team .member h4 {
@@ -848,6 +849,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .social i {
   font-size: 18px;
   margin: 0 2px;
+}
+
+@media (min-width: 769px) {
+  #team .member .pic img {
+    max-width: 100%;
+  }
 }
 
 /* Contact Section
