--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background: url(../img/landscape.jpg) no-repeat top center;
+  -webkit-background-size: cover;
+  background-size: cover;
   position: relative;
 }
 
