--- a/css/style.css
+++ b/css/style.css
@@ -859,110 +859,65 @@ body.mobile-nav-active #mobile-nav-toggle {
   }
 }
 
-/* Contact Section
+
+
+/* support Section
 --------------------------------*/
-#contact {
-  background: #f7f7f7;
-  padding: 80px 0 40px 0;
+#support {
+  background: #ffffff;
+  padding: 80px 0 60px 0;
+
 }
 
-#contact #google-map {
-  height: 300px;
+#support .member {
+  text-align: center;
   margin-bottom: 20px;
 }
 
-#contact .info {
-  color: #333333;
+#support .member .pic {
+  margin-bottom: 15px;
+  overflow: hidden;
+  /*height: 260px;*/
 }
 
-#contact .info i {
-  font-size: 32px;
-  color: #2dc997;
-  float: left;
+#support .member .pic img {
+  /*max-width: 100%;*/
+  max-width: 260px;
 }
 
-#contact .info p {
-  padding: 0 0 10px 50px;
-  margin-bottom: 20px;
-  line-height: 22px;
-  font-size: 14px;
-}
-
-#contact .info .email p {
-  padding-top: 5px;
-}
-
-#contact .social-links {
-  padding-bottom: 20px;
-}
-
-#contact .social-links a {
+#support .member h4 {
+  font-weight: 700;
+  margin-bottom: 2px;
   font-size: 18px;
-  display: inline-block;
-  background: #333;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
 }
 
-#contact .social-links a:hover {
-  background: #2dc997;
-  color: #fff;
-}
-
-#contact .form #sendmessage {
-  color: #2dc997;
-  border: 1px solid #2dc997;
-  display: none;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #errormessage {
-  color: red;
-  display: none;
-  border: 1px solid red;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#contact .form #sendmessage.show, #contact .form #errormessage.show, #contact .form .show {
+#support .member span {
+  font-style: italic;
   display: block;
-}
-
-#contact .form .validation {
-  color: red;
-  display: none;
-  margin: 0 0 20px;
-  font-weight: 400;
   font-size: 13px;
 }
 
-#contact .form input, #contact .form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
+#support .member .social {
+  margin-top: 15px;
 }
 
-#contact .form button[type="submit"] {
-  background: #2dc997;
-  border: 0;
-  padding: 10px 24px;
-  color: #fff;
-  transition: 0.4s;
+#support .member .social a {
+  color: #b3b3b3;
 }
 
-#contact .form button[type="submit"]:hover {
-  background: #51d8ad;
+#support .member .social a:hover {
+  color: #2dc997;
+}
+
+#support .member .social i {
+  font-size: 18px;
+  margin: 0 2px;
+}
+
+@media (min-width: 769px) {
+  #support .member .pic img {
+    max-width: 100%;
+  }
 }
 
 /*--------------------------------------------------------------
